# cqrs-rs

./: .gitignore  rustfmt.toml
cqrs/: Cargo.toml
cqrs-codegen/: Cargo.toml  build.rs
cqrs-codegen/impl/: Cargo.toml
cqrs-codegen/impl/src/: aggregate.rs  command.rs  event_sourced.rs  lib.rs  util.rs
cqrs-codegen/impl/src/event/: aggregate_event.rs  event.rs  mod.rs  registered_event.rs  typed_event.rs  versioned_event.rs
cqrs-codegen/src/: codegen.wasm  event.rs  lib.rs  util.rs  utility.rs
cqrs-codegen/src/event/: common.rs  event.rs  mod.rs  registered_event.rs  versioned_event.rs
cqrs-codegen/tests/: aggregate.rs  aggregate_event.rs  command.rs  event.rs  event_sourced.rs  registered_event.rs  versioned_event.rs
cqrs-core/: Cargo.toml
cqrs-core/src/: _aggregate.rs  aggregate.rs  command.rs  event.rs  lib.rs
cqrs-proptest/src/: lib.rs
cqrs/src/: event_processing.rs  lib.rs
cqrs/src/lifecycle/: basic.rs  static.rs
