[package]
name = "cqrs-codegen"
version = "0.1.0-dev"
edition = "2018"
# authors =
description = "Code generation for CQRS/ES"
# license = "Apache-2.0"
readme = "../README.md"
# documentation = "https://docs.rs/cqrs-core"
# repository = "https://github.com/cq-rs/cqrs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
synstructure = "0"

lazy_static = "1"

[dev-dependencies]
cqrs = { version = "0.3", path = "../cqrs" }
